WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
78663
In DRT, don't #define min or max on non-Windows platforms, it just isn't needed
https://bugs.webkit.org/show_bug.cgi?id=78663
Summary
In DRT, don't #define min or max on non-Windows platforms, it just isn't needed
Sam Weinig
Reported
2012-02-14 20:06:53 PST
In DRT, don't #define min or max on non-Windows platforms, it just isn't needed
Attachments
Patch
(1.71 KB, patch)
2012-02-14 20:08 PST
,
Sam Weinig
andersca
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Sam Weinig
Comment 1
2012-02-14 20:08:21 PST
Created
attachment 127105
[details]
Patch
Sam Weinig
Comment 2
2012-02-14 20:10:37 PST
Committed
r107775
: <
http://trac.webkit.org/changeset/107775
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug