In DRT, don't #define min or max on non-Windows platforms, it just isn't needed https://bugs.webkit.org/show_bug.cgi?id=78663

Reviewed by Anders Carlsson.

* DumpRenderTree/DumpRenderTreePrefix.h:
* DumpRenderTree/cg/ImageDiffCG.cpp:

git-svn-id: svn://svn.chromium.org/blink/trunk@107775 bbb929c8-8fbe-4397-9dbb-9b2b20218538