third_party/WebKit/Tools/DumpRenderTree/DumpRenderTreePrefix.h
@@ -33,7 +33,11 @@ FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
 
 #endif
 
+#if defined(WIN32) || defined(_WIN32)
+
 // If we don't define these, they get defined in windef.h. 
 // We want to use std::min and std::max
 #define max max
 #define min min
+
+#endif
